@@ -8,8 +8,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 
@@ -26,6 +26,9 @@ import org.gradle.api.capabilities.Capability;
 import org.gradle.api.initialization.IncludedBuild;
 import org.gradle.api.internal.artifacts.DefaultModuleVersionIdentifier;
 import org.gradle.api.internal.artifacts.dependencies.DefaultExternalModuleDependency;
+import org.gradle.api.internal.artifacts.dependencies.DefaultProjectDependency;
+import org.gradle.api.internal.project.ProjectInternal;
+import org.gradle.api.internal.tasks.TaskDependencyFactory;
 import org.gradle.api.provider.ListProperty;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.SourceSetContainer;
@@ -94,7 +97,6 @@ public class DependencyUtils {
                     project,
                     componentId.getProjectPath(),
                     componentId.getBuild().getBuildPath());
-
             if (projectDependency != null)
                 return projectDependency;
         }
@@ -228,7 +230,6 @@ public class DependencyUtils {
         if (extensionConfiguration != null) {
             final String deploymentProjectPath = ConfigurationUtils.getDeploymentModule(extensionConfiguration).get();
             deploymentProject = ToolingUtils.findLocalProject(extensionProject, deploymentProjectPath);
-
             if (deploymentProject == null) {
                 throw new GradleException("Cannot find deployment project for extension " + extensionArtifactId + " at path "
                         + deploymentProjectPath);
@@ -236,7 +237,6 @@ public class DependencyUtils {
         } else if (extensionDescriptor.containsKey(BootstrapConstants.PROP_DEPLOYMENT_ARTIFACT)) {
             final ArtifactCoords deploymentArtifact = ArtifactCoords
                     .fromString(extensionDescriptor.getProperty(BootstrapConstants.PROP_DEPLOYMENT_ARTIFACT));
-
             deploymentProject = ToolingUtils.findLocalProject(project, deploymentArtifact);
 
             if (deploymentProject == null) {
@@ -357,11 +357,9 @@ public class DependencyUtils {
     public static Dependency createDeploymentDependency(
             DependencyHandler dependencyHandler,
             ExtensionDependency<?> dependency) {
-        if (dependency instanceof ProjectExtensionDependency) {
-            ProjectExtensionDependency ped = (ProjectExtensionDependency) dependency;
+        if (dependency instanceof ProjectExtensionDependency ped) {
             return createDeploymentProjectDependency(dependencyHandler, ped);
-        } else if (dependency instanceof ArtifactExtensionDependency) {
-            ArtifactExtensionDependency aed = (ArtifactExtensionDependency) dependency;
+        } else if (dependency instanceof ArtifactExtensionDependency aed) {
             return createArtifactDeploymentDependency(dependencyHandler, aed);
         }
 
@@ -375,8 +373,13 @@ public class DependencyUtils {
                     ped.getDeploymentModule().getName(),
                     ped.getDeploymentModule().getVersion().toString());
         } else {
-            return handler.create(handler.project(Collections.singletonMap("path", ped.getDeploymentModule().getPath())));
+            return handler.create(handler.project(Map.of("path", ped.getDeploymentModule().getPath())));
         }
+    }
+
+    public static Dependency createDeploymentProjectDependency(Project project, TaskDependencyFactory taskDependencyFactory) {
+        return project.getDependencies().create(
+                new DefaultProjectDependency((ProjectInternal) project, true, taskDependencyFactory));
     }
 
     private static Dependency createArtifactDeploymentDependency(DependencyHandler handler,
@@ -384,5 +387,18 @@ public class DependencyUtils {
         return handler.create(dependency.getDeploymentModule().getGroupId() + ":"
                 + dependency.getDeploymentModule().getArtifactId() + ":"
                 + dependency.getDeploymentModule().getVersion());
+    }
+
+    public static ArtifactKey getKey(ResolvedArtifact artifact) {
+        return ArtifactKey.of(artifact.getModuleVersion().getId().getGroup(), artifact.getName(),
+                artifact.getClassifier() == null ? ArtifactCoords.DEFAULT_CLASSIFIER : artifact.getClassifier(),
+                artifact.getExtension() == null ? ArtifactCoords.TYPE_JAR : artifact.getExtension());
+    }
+
+    public static ArtifactCoords getArtifactCoords(ResolvedArtifact artifact) {
+        return ArtifactCoords.of(artifact.getModuleVersion().getId().getGroup(), artifact.getName(),
+                artifact.getClassifier() == null ? ArtifactCoords.DEFAULT_CLASSIFIER : artifact.getClassifier(),
+                artifact.getExtension() == null ? ArtifactCoords.TYPE_JAR : artifact.getExtension(),
+                artifact.getModuleVersion().getId().getVersion());
     }
 }
